# ufc_ml_agents

./: .gitignore  README.md  pyproject.toml  requirements.txt  ufc_2025_odds.csv  xgboost_predict.py
agent_loop/: CLI_USAGE.md  CONFIG_GUIDE.md  ITEM_1_COMPLETE.md  README.md  README_CONFIG.md  RUN_CONFIG_GUIDE.md  __init__.py  agent_loop_config.json  config.py  improvement_plan.md  orchestrator.py  run.py  run_config.json  run_config.template.json  run_config.yaml  run_config_underdog_focus.json  test_kept_changes.py  test_tester.py  tools.py  utils.py
config/: config.yaml
database/: __init__.py  analyze_fighter.py  db_manager.py  schema.py
evaluation/: compare_to_baseline.py  deep_analysis.py  evaluate_model.py  export_predictions_to_excel.py  generate_html_report.py  preview_upcoming_fights.py
features/: BATCH_LOADING_README.md  CACHE_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_IDEAS.md  QUICK_START.md  feature_exclusions.py  feature_pipeline.py  feature_vector_builder.py  matchup_features.py  optimization_examples.py  performance_tools.py  test_batch_loading.py  time_based.py
models/: __init__.py  baseline.json  xgboost_model.py
predict_site/: README.md  __init__.py  app.py  run.sh
reports_strict/: all_bets_20260126_061426.csv  comparison_report_20260126_061426.json  eval_data_20260126_061426.csv  model_eval_20260126_061426.json  model_evaluation_20260126_061426.html  top_25_pct_investigation_20260126_061426.csv
schema/: README.md  __init__.py  feature_schema.json  generate_schema.py  (+1 more)
(+149 files in other folders)
