[project]
name = "ufc-analysis-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "anthropic>=0.18.0",
    "autogluon-tabular>=1.4.0",
    "beautifulsoup4>=4.12.0",
    "catboost>=1.2.0",
    "category-encoders>=2.6.0",
    "fastai>=2.8.5",
    "feature-engine>=1.6.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "lightgbm>=4.0.0",
    "loguru>=0.7.0",
    "lxml>=5.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "ray>=2.10.0,<2.45.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.13.0",
    "selenium>=4.15.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "xgboost>=2.0.0",
]

[tool.setuptools]
packages = [
    "features",
    "evaluation",
    "database",
    "models",
    "scripts",
    "schema",
    "config",
]
